@@ -18,6 +18,7 @@ NEW_IN = {
     'bitarray.decode':        '3.0: returns iterator (equivalent to past '
                                    '`.iterdecode()`)',
     'bitarray.endian':        '3.4: replaces former `.endian()` method',
+    'bitarray.extend':        '3.4: raise `TypeError` for byte-like object',
     'bitarray.find':         ['2.1',
                               '2.9: add optional keyword argument `right`'],
     'bitarray.frombytes':     '2.5.0: allow bytes-like argument',
